# bottle-currency

./: .gitignore  LICENSE  README.md  config.py  main.py  pyproject.toml
app/: __init__.py  extensions.py  log.py
app/controllers/: html.py  static.py
app/models/: currency.py
app/services/: parser.py
app/static/css/: style.css
app/views/: index.tpl
tests/: conftest.py  test_currency.py
