[project]
name = "bottle-base"
version = "0.1.0"
description = "Bottle base project"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "bottle>=0.12.25",
    "peewee>=3.17.9",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "webtest>=3.0.4",
]


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle
    "F",      # pyflakes
    "UP",     # pyupgrade
]
